Move default value into method